--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,10 @@ body, h1, h2, h3, form, input {
   border: none;
   -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
           box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
-  -webkit-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
+  -webkit-transition: -webkit-box-shadow 0.2s ease-in;
+  transition: -webkit-box-shadow 0.2s ease-in;
+  transition: box-shadow 0.2s ease-in;
+  transition: box-shadow 0.2s ease-in, -webkit-box-shadow 0.2s ease-in;
   cursor: pointer;
 }
 
@@ -133,17 +135,18 @@ body, h1, h2, h3, form, input {
 
 .task__check:focus + .task__check-fake,
 .add-task__check:focus + .task__check-fake {
-  outline: 1px solid;
+  outline: auto 5px -webkit-focus-ring-color;
+}
+
+.task__check:active + .task__check-fake,
+.add-task__check:active + .task__check-fake {
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
 .task__check:checked + .task__check-fake,
 .add-task__check:checked + .task__check-fake {
-  background-image: url("../image/close-icon.svg");
-}
-
-.task__check:checked + .task__check-fake::before,
-.add-task__check:checked + .task__check-fake::before {
-  opacity: 0;
+  background-image: url("../image/check-icon.svg");
 }
 
 .task__check-fake,
@@ -151,20 +154,6 @@ body, h1, h2, h3, form, input {
   position: relative;
   display: block;
   margin-right: 6px;
-  background-image: none;
-}
-
-.task__check-fake::before,
-.add-task__check-fake::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 75%;
-  height: 75%;
-  border-radius: 50%;
-  background-color: #ffffff;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  background-image: url("../image/uncheck-icon.svg");
 }
 /*# sourceMappingURL=style.css.map */
