--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,7 @@ $color-gray-light: #eeeeee;
 $font-main: 'Roboto Mono', monospace;
 
 
+
 body, h1, h2, h3, form, input {
     margin: 0;
     padding: 0;
@@ -69,12 +70,8 @@ body, h1, h2, h3, form, input {
         background-position: center;
         border: none;
         box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        transition: all 0.2s ease-in;
+        transition: box-shadow 0.2s ease-in;
         cursor: pointer;
-        &:hover,
-        &:focus {
-            
-        }
         &:active {
             box-shadow: 1px 1px 1px rgba($color: #000000, $alpha: 0.25);
         }
@@ -92,30 +89,19 @@ body, h1, h2, h3, form, input {
         border: 0;
         overflow: hidden;
         &:focus + .task__check-fake {
-            outline: 1px solid;
+            outline: auto 5px -webkit-focus-ring-color;
+        }
+        &:active + .task__check-fake {
+            box-shadow: 1px 1px 1px rgba($color: #000000, $alpha: 0.25);
         }
         &:checked + .task__check-fake {
-            background-image: url('../image/close-icon.svg');
-            &::before {
-                opacity: 0;
-            }
+            background-image: url('../image/check-icon.svg');
         }
     }
     &__check-fake {
         position: relative;
         display: block;
         margin-right: 6px;
-        background-image: none;
-        &::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 75%;
-            height: 75%;
-            border-radius: 50%;
-            background-color: #ffffff;
-            transform: translate(-50%, -50%);
-        }
+        background-image: url('../image/uncheck-icon.svg');
     }
 }
