--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,11 @@ body, h1, h2, h3, form, input {
           animation: invalid 0.3s forwards ease-in;
 }
 
+.task--completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
 @-webkit-keyframes invalid {
   0% {
     -webkit-transform: translate(0, 0);
