--- a/css/style.scss
+++ b/css/style.scss
@@ -106,7 +106,10 @@ body, h1, h2, h3, form, input {
 }
 .task--invalid {
     animation: invalid 0.3s forwards ease-in;
-    // transition: transform 0.5s ease-in;
+}
+.task--completed {
+    text-decoration: line-through;
+    opacity: 0.5;
 }
 
 @keyframes invalid {
