--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,14 @@ body, h1, h2, h3, form, input {
   display: none;
 }
 
+.task--theme-second .task__input {
+  border-color: #5ebe7f;
+}
+
+.task--theme-second .task__button {
+  background-color: #5ebe7f;
+}
+
 @-webkit-keyframes invalid {
   0% {
     -webkit-transform: translate(0, 0);
@@ -205,11 +213,17 @@ body, h1, h2, h3, form, input {
 
 @media screen and (max-width: 600px) {
   .page {
-    padding: 5px;
+    padding: 5px 7px;
     font-size: 14px;
   }
   .todo__body {
-    padding: 10px;
+    padding: 7px;
+  }
+  .task:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .task:first-child {
+    margin-bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
