--- a/css/style.scss
+++ b/css/style.scss
@@ -5,11 +5,11 @@ $color-gray-light: #eeeeee;
 $font-main: 'Roboto Mono', monospace;
 
 
-
 body, h1, h2, h3, form, input {
     margin: 0;
     padding: 0;
 }
+
 
 .page {
     padding: 20px;
@@ -115,6 +115,14 @@ body, h1, h2, h3, form, input {
 .task--hidden {
     display: none;
 }
+.task--theme-second .task__input {
+    border-color: $color-second;
+}
+.task--theme-second .task__button {
+    background-color: $color-second;
+}
+
+
 
 @keyframes invalid {
     0% {
@@ -136,13 +144,22 @@ body, h1, h2, h3, form, input {
 
 
 @media screen and (max-width: 600px) {
+    
     .page {
-        padding: 5px;
+        padding: 5px 7px;
         font-size: 14px;
     }
     .todo {
         &__body {
-            padding: 10px;
+            padding: 7px;
+        }
+    }
+    .task {
+        &:not(:last-child) {
+            margin-bottom: 10px;
+        }
+        &:first-child {
+            margin-bottom: 20px;
         }
     }
 }
