--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,48 @@ body, h1, h2, h3, form, input {
   padding: 20px;
 }
 
+.todo__progress {
+  width: 100%;
+  height: 20px;
+  margin-top: 20px;
+  border: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
+          box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
+}
+
+.todo__progress::-webkit-progress-bar {
+  background-color: #eeeeee;
+  border-radius: 0;
+}
+
+.todo__progress::-moz-progress-bar {
+  background-color: #eeeeee;
+  background-color: #2fb6cf;
+  border-radius: 0;
+}
+
+.todo__progress::-webkit-progress-value {
+  background-color: #2fb6cf;
+  background-image: -webkit-gradient(linear, left top, right top, from(#2fb6cf), to(#5ebe7f));
+  background-image: linear-gradient(left, #2fb6cf, #5ebe7f);
+}
+
+.todo__progress::-moz-progress-value {
+  background-color: #2fb6cf;
+  background-image: linear-gradient(left, #2fb6cf, #5ebe7f);
+}
+
 .task {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transition: opacity 0.3s ease-in;
-  transition: opacity 0.3s ease-in;
+  -webkit-transition: opacity 0.2s ease-in, -webkit-filter 0.2s ease-in;
+  transition: opacity 0.2s ease-in, -webkit-filter 0.2s ease-in;
+  transition: opacity 0.2s ease-in, filter 0.2s ease-in;
+  transition: opacity 0.2s ease-in, filter 0.2s ease-in, -webkit-filter 0.2s ease-in;
 }
 
 .task:not(:last-child) {
@@ -57,6 +93,7 @@ body, h1, h2, h3, form, input {
   font-size: inherit;
   background-color: #eeeeee;
   border: 3px solid #2fb6cf;
+  border-radius: 0;
   -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
           box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
   -webkit-transition: -webkit-box-shadow 0.2s ease-in;
@@ -150,7 +187,9 @@ body, h1, h2, h3, form, input {
 
 .task--completed {
   text-decoration: line-through;
-  opacity: 0.5;
+  opacity: 0.7;
+  -webkit-filter: grayscale(0.7);
+          filter: grayscale(0.7);
 }
 
 .task--hidden {
