--- a/css/style.scss
+++ b/css/style.scss
@@ -36,12 +36,38 @@ body, h1, h2, h3, form, input {
     &__body {
         padding: 20px;
     }
+    &__progress {
+        width: 100%;
+        height: 20px;
+        margin-top: 20px;
+        border: none;
+        appearance: none;
+        box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
+        
+        &::-webkit-progress-bar {
+            background-color: $color-gray-light;
+            border-radius: 0;
+        }
+        &::-moz-progress-bar {
+            background-color: $color-gray-light;
+            background-color: $color-main;
+            border-radius: 0;
+        }
+        &::-webkit-progress-value {
+            background-color: $color-main;
+            background-image: linear-gradient(left, $color-main, $color-second);
+        }
+        &::-moz-progress-value {
+            background-color: $color-main;
+            background-image: linear-gradient(left, $color-main, $color-second);
+        }
+    }
 }
 
 
 .task {
     display: flex;
-    transition: opacity 0.3s ease-in;
+    transition: opacity 0.2s ease-in, filter 0.2s ease-in;
     &:not(:last-child) {
         margin-bottom: 20px;
     }
@@ -52,6 +78,7 @@ body, h1, h2, h3, form, input {
         font-size: inherit;
         background-color: $color-gray-light;
         border: 3px solid $color-main;
+        border-radius: 0;
         box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
         transition: box-shadow 0.2s ease-in;
         &::placeholder {
@@ -110,7 +137,8 @@ body, h1, h2, h3, form, input {
 }
 .task--completed {
     text-decoration: line-through;
-    opacity: 0.5;
+    opacity: 0.7;
+    filter: grayscale(0.7);
 }
 .task--hidden {
     display: none;
