--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,9 @@ body, h1, h2, h3, form, input {
 }
 
 .todo__progress {
+  display: block;
   width: 100%;
-  height: 20px;
+  height: 25px;
   margin-top: 20px;
   border: none;
   -webkit-appearance: none;
@@ -63,11 +64,15 @@ body, h1, h2, h3, form, input {
   background-color: #2fb6cf;
   background-image: -webkit-gradient(linear, left top, right top, from(#2fb6cf), to(#5ebe7f));
   background-image: linear-gradient(left, #2fb6cf, #5ebe7f);
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 .todo__progress::-moz-progress-value {
   background-color: #2fb6cf;
   background-image: linear-gradient(left, #2fb6cf, #5ebe7f);
+  -webkit-transition: width 0.3s linear;
+  transition: width 0.3s linear;
 }
 
 .task {
