--- a/css/style.css
+++ b/css/style.css
@@ -55,13 +55,12 @@ body, h1, h2, h3, form, input {
 }
 
 .todo__progress::-moz-progress-bar {
-  background-color: #eeeeee;
   background-color: #2fb6cf;
+  background-image: -moz-linear-gradient(left, #2fb6cf, #5ebe7f);
   border-radius: 0;
 }
 
 .todo__progress::-webkit-progress-value {
-  background-color: #2fb6cf;
   background-image: -webkit-gradient(linear, left top, right top, from(#2fb6cf), to(#5ebe7f));
   background-image: linear-gradient(left, #2fb6cf, #5ebe7f);
   -webkit-transition: all 0.3s linear;
@@ -69,8 +68,6 @@ body, h1, h2, h3, form, input {
 }
 
 .todo__progress::-moz-progress-value {
-  background-color: #2fb6cf;
-  background-image: linear-gradient(left, #2fb6cf, #5ebe7f);
   -webkit-transition: width 0.3s linear;
   transition: width 0.3s linear;
 }
@@ -105,6 +102,7 @@ body, h1, h2, h3, form, input {
   transition: -webkit-box-shadow 0.2s ease-in;
   transition: box-shadow 0.2s ease-in;
   transition: box-shadow 0.2s ease-in, -webkit-box-shadow 0.2s ease-in;
+  -webkit-appearance: none;
 }
 
 .task__input::-webkit-input-placeholder {
