--- a/css/style.scss
+++ b/css/style.scss
@@ -22,16 +22,34 @@ body, h1, h2, h3, form, input {
     margin: 0 auto;
     background-color: $color-gray;
     box-shadow: 4px 4px 0 rgba($color: #000000, $alpha: 0.4);
+    overflow: hidden;
     &__header {
+        position: relative;
+        z-index: 2;
         height: 50px;
         text-align: center;
-        background-color: $color-main;
+        
     }
     &__title {
+        position: relative;
+        z-index: 2;
         font-size: 36px;
         line-height: 50px;
         font-weight: normal;
+        background-color: $color-main;
         user-select: none;
+    }
+    &__settings {
+        position: absolute;
+        z-index: 0;
+        left: 50%;
+        bottom: 0;
+        width: 80%;
+        height: 50px;
+        transform: translate(-50%, -10%);
+    }
+    &__settings--active {
+        transform: translate(-50%, 100%);
     }
     &__body {
         padding: 20px;
@@ -52,17 +70,32 @@ body, h1, h2, h3, form, input {
         }
         &::-moz-progress-bar {
             background-color: $color-main;
-            background-image: -moz-linear-gradient(left, $color-main, $color-second);
+            background-image: -moz-linear-gradient(to left, $color-main, $color-second);
             border-radius: 0;
         }
         &::-webkit-progress-value {
-            background-image: linear-gradient(left, $color-main, $color-second);
+            background-image: linear-gradient(to left, $color-main, $color-second);
             transition: all 0.3s linear;
         }
         &::-moz-progress-value {
             transition: width 0.3s linear;
         }
     }
+}
+
+
+.settings {
+    background-color: $color-second;
+    box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
+}
+.settings-toggle {
+    position: absolute;
+    z-index: 5;
+    top: 50%;
+    left: 10px;
+    width: 30px;
+    height: 30px;
+    transform: translateY(-50%);
 }
 
 
@@ -176,12 +209,13 @@ body, h1, h2, h3, form, input {
 @media screen and (max-width: 600px) {
     
     .page {
-        padding: 5px 7px;
+        padding: 0; 
         font-size: 14px;
     }
     .todo {
+        box-shadow: none;
         &__body {
-            padding: 7px;
+            padding: 10px;
         }
     }
     .task {
