--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,7 @@ body, h1, h2, h3, form, input {
         width: 80%;
         height: 50px;
         transform: translate(-50%, -10%);
+        transition: transform 0.3s ease-in;
     }
     &__settings--active {
         transform: translate(-50%, 100%);
@@ -85,7 +86,9 @@ body, h1, h2, h3, form, input {
 
 
 .settings {
-    background-color: $color-second;
+    background-color: lighten($color: $color-main, $amount: 20);
+    border: 3px solid $color-main;
+    border-top: 0;
     box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
 }
 .settings-toggle {
@@ -95,7 +98,17 @@ body, h1, h2, h3, form, input {
     left: 10px;
     width: 30px;
     height: 30px;
+    background-color: transparent;
+    background-image: url('../image/settings.svg');
+    border: 0;
+    border-radius: 50%;
     transform: translateY(-50%);
+    transform-origin: center;
+    transition: box-shadow 0.2s ease-in, transform 0.3s linear;
+    cursor: pointer;
+}
+.settings-toggle--active {
+    transform: translateY(-50%) translateX(100%) rotate(180deg);
 }
 
 
@@ -217,6 +230,11 @@ body, h1, h2, h3, form, input {
         &__body {
             padding: 10px;
         }
+    }
+    .settings-toggle {
+        width: 25px;
+        height: 25px;
+        left: 5px;
     }
     .task {
         &:not(:last-child) {
