--- a/css/style.scss
+++ b/css/style.scss
@@ -28,7 +28,6 @@ body, h1, h2, h3, form, input {
         z-index: 2;
         height: 50px;
         text-align: center;
-        
     }
     &__title {
         position: relative;
@@ -45,7 +44,7 @@ body, h1, h2, h3, form, input {
         left: 50%;
         bottom: 0;
         width: 80%;
-        height: 50px;
+        // height: 100px;
         transform: translate(-50%, -10%);
         transition: transform 0.3s ease-in;
     }
@@ -86,10 +85,33 @@ body, h1, h2, h3, form, input {
 
 
 .settings {
-    background-color: lighten($color: $color-main, $amount: 20);
+    background-color: lighten($color: rgba($color-main,0.9), $amount: 20);
     border: 3px solid $color-main;
     border-top: 0;
-    box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow: inset 0px 0px 5px 2px rgba($color: #000000, $alpha: 0.25);
+    &__form {
+        display: flex;
+        flex-wrap: wrap;
+        // padding: 20px;
+        box-sizing: border-box;
+    }
+    &__title {
+
+    }
+    &__label {
+        position: relative;
+        display: block;
+        width: 50%;
+        margin: 10px 0;
+    }
+    &__check {
+
+    }
+    &__check-fake {
+
+    }
 }
 .settings-toggle {
     position: absolute;
@@ -231,11 +253,7 @@ body, h1, h2, h3, form, input {
             padding: 10px;
         }
     }
-    .settings-toggle {
-        width: 25px;
-        height: 25px;
-        left: 5px;
-    }
+
     .task {
         &:not(:last-child) {
             margin-bottom: 10px;
@@ -243,5 +261,13 @@ body, h1, h2, h3, form, input {
         &:first-child {
             margin-bottom: 20px;
         }
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .settings-toggle {
+        width: 25px;
+        height: 25px;
+        left: 5px;
     }
 }
