added style for custom options checkboxes

--- a/css/style.scss
+++ b/css/style.scss
@@ -43,8 +43,7 @@ body, h1, h2, h3, form, input {
         z-index: 0;
         left: 50%;
         bottom: 0;
-        width: 80%;
-        // height: 100px;
+        width: 75%;
         transform: translate(-50%, -10%);
         transition: transform 0.3s ease-in;
     }
@@ -94,11 +93,10 @@ body, h1, h2, h3, form, input {
     &__form {
         display: flex;
         flex-wrap: wrap;
-        // padding: 20px;
         box-sizing: border-box;
     }
     &__title {
-
+        // vertical-align: middle;
     }
     &__label {
         position: relative;
@@ -107,10 +105,50 @@ body, h1, h2, h3, form, input {
         margin: 10px 0;
     }
     &__check {
-
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        clip: rect(1px 1px 1px 1px);
+        clip: rect(1px, 1px, 1px, 1px);
+        border: 0;
+        overflow: hidden;
+        &:focus + .settings__check-fake {
+            outline: auto 5px -webkit-focus-ring-color;
+        }
+        &:active + .settings__check-fake {
+            
+        }
+        &:checked + .settings__check-fake {
+            background-color: $color-main;
+        }
+        &:checked + .settings__check-fake::before {
+            transform: translateY(-50%) translateX(16px);
+        }
     }
     &__check-fake {
-
+        position: relative;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+        background-color: $color-gray;
+        border-radius: 20px;
+        box-shadow: inset 0 0 2px rgba($color: #000000, $alpha: 0.3);
+        vertical-align: bottom;
+        transition: background-color 0.2s ease-in;
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 50%;
+            width: 24px;
+            height: 24px;
+            background-color: #ffffff;
+            border-radius: 50%; 
+            box-shadow: 0 0 3px rgba($color: #000000, $alpha: 0.3);
+            transform: translateY(-50%);
+            transition: transform 0.2s ease-in;
+        }
     }
 }
 .settings-toggle {
@@ -249,6 +287,9 @@ body, h1, h2, h3, form, input {
     }
     .todo {
         box-shadow: none;
+        &__settings {
+            width: 85%;
+        }
         &__body {
             padding: 10px;
         }
