--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body, h1, h2, h3, form, input {
   z-index: 0;
   left: 50%;
   bottom: 0;
-  width: 80%;
+  width: 75%;
   -webkit-transform: translate(-50%, -10%);
           transform: translate(-50%, -10%);
   -webkit-transition: -webkit-transform 0.3s ease-in;
@@ -121,6 +121,63 @@ body, h1, h2, h3, form, input {
   display: block;
   width: 50%;
   margin: 10px 0;
+}
+
+.settings__check {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  border: 0;
+  overflow: hidden;
+}
+
+.settings__check:focus + .settings__check-fake {
+  outline: auto 5px -webkit-focus-ring-color;
+}
+
+.settings__check:checked + .settings__check-fake {
+  background-color: #2fb6cf;
+}
+
+.settings__check:checked + .settings__check-fake::before {
+  -webkit-transform: translateY(-50%) translateX(16px);
+          transform: translateY(-50%) translateX(16px);
+}
+
+.settings__check-fake {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: #e2e2e2;
+  border-radius: 20px;
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+  vertical-align: bottom;
+  -webkit-transition: background-color 0.2s ease-in;
+  transition: background-color 0.2s ease-in;
+}
+
+.settings__check-fake::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 24px;
+  height: 24px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: -webkit-transform 0.2s ease-in;
+  transition: -webkit-transform 0.2s ease-in;
+  transition: transform 0.2s ease-in;
+  transition: transform 0.2s ease-in, -webkit-transform 0.2s ease-in;
 }
 
 .settings-toggle {
@@ -339,6 +396,9 @@ body, h1, h2, h3, form, input {
   .todo {
     -webkit-box-shadow: none;
             box-shadow: none;
+  }
+  .todo__settings {
+    width: 85%;
   }
   .todo__body {
     padding: 10px;
