--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,10 @@ body, h1, h2, h3, form, input {
           box-sizing: border-box;
 }
 
+.settings__title {
+  line-height: 25px;
+}
+
 .settings__label {
   position: relative;
   display: block;
@@ -138,25 +142,29 @@ body, h1, h2, h3, form, input {
   outline: auto 5px -webkit-focus-ring-color;
 }
 
+.settings__check:active + .settings__check-fake::before {
+  background-color: #e6e6e6;
+}
+
 .settings__check:checked + .settings__check-fake {
   background-color: #2fb6cf;
 }
 
 .settings__check:checked + .settings__check-fake::before {
-  -webkit-transform: translateY(-50%) translateX(16px);
-          transform: translateY(-50%) translateX(16px);
+  -webkit-transform: translateY(-50%) translateX(20px);
+          transform: translateY(-50%) translateX(20px);
 }
 
 .settings__check-fake {
   position: relative;
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 50px;
+  height: 25px;
   background-color: #e2e2e2;
   border-radius: 20px;
   -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
           box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
-  vertical-align: bottom;
+  vertical-align: text-top;
   -webkit-transition: background-color 0.2s ease-in;
   transition: background-color 0.2s ease-in;
 }
@@ -166,18 +174,18 @@ body, h1, h2, h3, form, input {
   position: absolute;
   left: 0;
   top: 50%;
-  width: 24px;
-  height: 24px;
+  width: 30px;
+  height: 30px;
   background-color: #ffffff;
   border-radius: 50%;
   -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
           box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  -webkit-transition: -webkit-transform 0.2s ease-in;
-  transition: -webkit-transform 0.2s ease-in;
-  transition: transform 0.2s ease-in;
-  transition: transform 0.2s ease-in, -webkit-transform 0.2s ease-in;
+  -webkit-transition: background-color 0.2s ease-in, -webkit-transform 0.2s ease-in;
+  transition: background-color 0.2s ease-in, -webkit-transform 0.2s ease-in;
+  transition: transform 0.2s ease-in, background-color 0.2s ease-in;
+  transition: transform 0.2s ease-in, background-color 0.2s ease-in, -webkit-transform 0.2s ease-in;
 }
 
 .settings-toggle {
@@ -402,6 +410,9 @@ body, h1, h2, h3, form, input {
   }
   .todo__body {
     padding: 10px;
+  }
+  .settings__title {
+    vertical-align: middle;
   }
   .task:not(:last-child) {
     margin-bottom: 10px;
