--- a/css/style.scss
+++ b/css/style.scss
@@ -40,6 +40,7 @@ body, h1, h2, h3, form, input {
     }
     &__settings {
         position: absolute;
+        // display: none;
         z-index: 0;
         left: 50%;
         bottom: 0;
@@ -48,6 +49,8 @@ body, h1, h2, h3, form, input {
         transition: transform 0.3s ease-in;
     }
     &__settings--active {
+        // display: block;
+        // user-select: none;
         transform: translate(-50%, 100%);
     }
     &__body {
@@ -96,7 +99,7 @@ body, h1, h2, h3, form, input {
         box-sizing: border-box;
     }
     &__title {
-        // vertical-align: middle;
+        line-height: 25px;
     }
     &__label {
         position: relative;
@@ -117,37 +120,41 @@ body, h1, h2, h3, form, input {
             outline: auto 5px -webkit-focus-ring-color;
         }
         &:active + .settings__check-fake {
-            
+            &::before {
+                background-color: darken($color: #ffffff, $amount: 10);
+            }
         }
         &:checked + .settings__check-fake {
             background-color: $color-main;
         }
-        &:checked + .settings__check-fake::before {
-            transform: translateY(-50%) translateX(16px);
+        &:checked + .settings__check-fake {
+            &::before {
+                transform: translateY(-50%) translateX(20px);
+            }
         }
     }
     &__check-fake {
         position: relative;
         display: inline-block;
-        width: 40px;
-        height: 20px;
+        width: 50px;
+        height: 25px;
         background-color: $color-gray;
         border-radius: 20px;
         box-shadow: inset 0 0 2px rgba($color: #000000, $alpha: 0.3);
-        vertical-align: bottom;
+        vertical-align: text-top;
         transition: background-color 0.2s ease-in;
         &::before {
             content: '';
             position: absolute;
             left: 0;
             top: 50%;
-            width: 24px;
-            height: 24px;
+            width: 30px;
+            height: 30px;
             background-color: #ffffff;
             border-radius: 50%; 
             box-shadow: 0 0 3px rgba($color: #000000, $alpha: 0.3);
             transform: translateY(-50%);
-            transition: transform 0.2s ease-in;
+            transition: transform 0.2s ease-in, background-color 0.2s ease-in;
         }
     }
 }
@@ -292,6 +299,11 @@ body, h1, h2, h3, form, input {
         }
         &__body {
             padding: 10px;
+        }
+    }
+    .settings {
+        &__title {
+            vertical-align: middle;
         }
     }
 
