--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,8 @@ body, h1, h2, h3, form, input {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding: 0 10px;
+  text-align: left;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
