--- a/css/style.scss
+++ b/css/style.scss
@@ -96,6 +96,8 @@ body, h1, h2, h3, form, input {
     &__form {
         display: flex;
         flex-wrap: wrap;
+        padding: 0 10px;
+        text-align: left;
         box-sizing: border-box;
     }
     &__title {
