--- a/css/style.scss
+++ b/css/style.scss
@@ -49,8 +49,6 @@ body, h1, h2, h3, form, input {
         transition: transform 0.3s ease-in;
     }
     &__settings--active {
-        // display: block;
-        // user-select: none;
         transform: translate(-50%, 100%);
     }
     &__body {
@@ -64,8 +62,7 @@ body, h1, h2, h3, form, input {
         border: none;
         appearance: none;
         box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        
-        
+        transition: height 0.2s ease-in;
         &::-webkit-progress-bar {
             background-color: $color-gray-light;
             border-radius: 0;
@@ -196,7 +193,7 @@ body, h1, h2, h3, form, input {
         border: 3px solid $color-main;
         border-radius: 0;
         box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        transition: box-shadow 0.2s ease-in;
+        transition: box-shadow 0.2s ease-in, width 0.2s linear;
         -webkit-appearance: none;
         &::placeholder {
             font-size: inherit;
@@ -204,6 +201,10 @@ body, h1, h2, h3, form, input {
         &:focus {
             box-shadow: 1px 1px 1px rgba($color: #000000, $alpha: 0.25);
         }
+    }
+    &__input--price {
+        display: none;
+        max-width: 70px;
     }
     &__button {
         width: 40px;
@@ -297,19 +298,40 @@ body, h1, h2, h3, form, input {
     .todo {
         box-shadow: none;
         &__settings {
-            width: 85%;
+            width: 90%;
         }
         &__body {
-            padding: 10px;
+            padding: 5px;
         }
     }
     .settings {
+        &__form {
+            text-align: center;
+        }
         &__title {
             vertical-align: middle;
+        }
+        &__check-fake {
+            display: block;
+            margin: 0 auto;
         }
     }
 
     .task {
+        flex-wrap: wrap;
+        &__input {
+            width: 100%;
+            padding: 4px 8px;
+            border-width: 2px;
+        }
+        &__input--price {
+            max-width: 50px;
+        }
+        &__button {
+            width: 30px;
+            height: 30px;
+            background-size: 70%;
+        }
         &:not(:last-child) {
             margin-bottom: 10px;
         }
