--- a/css/style.scss
+++ b/css/style.scss
@@ -117,7 +117,7 @@ body, h1, h2, h3, form, input {
         &:focus + .settings__check-fake {
             outline: auto 5px -webkit-focus-ring-color;
         }
-        &:active + .settings__check-fake {
+        &:active:enabled + .settings__check-fake {
             &::before {
                 background-color: darken($color: #ffffff, $amount: 10);
             }
@@ -129,6 +129,14 @@ body, h1, h2, h3, form, input {
             &::before {
                 transform: translateY(-50%) translateX(20px);
             }
+        }
+        &:disabled + .settings__check-fake {
+            opacity: 0.7;
+        }
+        &:disabled ~ .settings__title {
+            text-decoration: line-through;
+            opacity: 0.7;
+            user-select: none;
         }
     }
     &__check-fake {
@@ -262,7 +270,7 @@ body, h1, h2, h3, form, input {
     width: 0;
     height: 0;
     clip: rect(1px 1px 1px 1px);
-    // visibility: hidden;
+    visibility: hidden;
 }
 .task--theme-second .task__input {
     border-color: $color-second;
