--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,10 @@ body, h1, h2, h3, form, input {
   display: block;
   width: 50%;
   margin: 10px 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .settings__check {
@@ -166,10 +170,6 @@ body, h1, h2, h3, form, input {
 .settings__check:disabled ~ .settings__title {
   text-decoration: line-through;
   opacity: 0.7;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
 }
 
 .settings__check-fake {
@@ -225,6 +225,12 @@ body, h1, h2, h3, form, input {
   transition: box-shadow 0.2s ease-in, transform 0.3s linear;
   transition: box-shadow 0.2s ease-in, transform 0.3s linear, -webkit-box-shadow 0.2s ease-in, -webkit-transform 0.3s linear;
   cursor: pointer;
+  outline: none;
+}
+
+.settings-toggle:focus {
+  -webkit-box-shadow: 0 0 5px rgba(48, 48, 48, 0.7);
+          box-shadow: 0 0 5px rgba(48, 48, 48, 0.7);
 }
 
 .settings-toggle--active {
@@ -236,10 +242,10 @@ body, h1, h2, h3, form, input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transition: opacity 0.2s ease-in, -webkit-filter 0.2s ease-in;
-  transition: opacity 0.2s ease-in, -webkit-filter 0.2s ease-in;
-  transition: opacity 0.2s ease-in, filter 0.2s ease-in;
-  transition: opacity 0.2s ease-in, filter 0.2s ease-in, -webkit-filter 0.2s ease-in;
+  -webkit-transition: opacity 0.2s ease-in, -webkit-filter 0.2s ease-in, -webkit-transform 0.3s ease-in;
+  transition: opacity 0.2s ease-in, -webkit-filter 0.2s ease-in, -webkit-transform 0.3s ease-in;
+  transition: opacity 0.2s ease-in, filter 0.2s ease-in, transform 0.3s ease-in;
+  transition: opacity 0.2s ease-in, filter 0.2s ease-in, transform 0.3s ease-in, -webkit-filter 0.2s ease-in, -webkit-transform 0.3s ease-in;
 }
 
 .task:not(:last-child) {
@@ -358,6 +364,11 @@ body, h1, h2, h3, form, input {
   opacity: 0.7;
   -webkit-filter: grayscale(0.7);
           filter: grayscale(0.7);
+}
+
+.task--removed {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
 }
 
 .task--hidden {
