--- a/css/style.scss
+++ b/css/style.scss
@@ -104,6 +104,7 @@ body, h1, h2, h3, form, input {
         display: block;
         width: 50%;
         margin: 10px 0;
+        user-select: none;
     }
     &__check {
         position: absolute;
@@ -136,7 +137,6 @@ body, h1, h2, h3, form, input {
         &:disabled ~ .settings__title {
             text-decoration: line-through;
             opacity: 0.7;
-            user-select: none;
         }
     }
     &__check-fake {
@@ -179,6 +179,10 @@ body, h1, h2, h3, form, input {
     transform-origin: center;
     transition: box-shadow 0.2s ease-in, transform 0.3s linear;
     cursor: pointer;
+    outline: none;
+    &:focus {
+        box-shadow: 0 0 5px rgba($color: #303030, $alpha: 0.7);
+    }
 }
 .settings-toggle--active {
     transform: translateY(-50%) translateX(100%) rotate(180deg);
@@ -187,7 +191,7 @@ body, h1, h2, h3, form, input {
 
 .task {
     display: flex;
-    transition: opacity 0.2s ease-in, filter 0.2s ease-in;
+    transition: opacity 0.2s ease-in, filter 0.2s ease-in, transform 0.3s ease-in;
     &:not(:last-child) {
         margin-bottom: 20px;
     }
@@ -264,6 +268,9 @@ body, h1, h2, h3, form, input {
     text-decoration: line-through;
     opacity: 0.7;
     filter: grayscale(0.7);
+}
+.task--removed {
+    transform: translateX(-100%);
 }
 .task--hidden {
     position: absolute;
