--- a/css/style.css
+++ b/css/style.css
@@ -256,9 +256,9 @@ body, h1, h2, h3, form, input {
 .task__date {
   position: absolute;
   z-index: 1;
-  top: -50%;
+  top: -14px;
   left: 46px;
-  padding: 3px;
+  padding: 0 3px;
   font-size: 0.8em;
   font-weight: bold;
   background-color: #5ebe7f;
@@ -483,7 +483,6 @@ body, h1, h2, h3, form, input {
   }
   .task__date {
     left: 36px;
-    padding: 0 3px;
   }
   .task__input {
     width: 100%;
