--- a/css/style.scss
+++ b/css/style.scss
@@ -199,9 +199,9 @@ body, h1, h2, h3, form, input {
     &__date {
         position: absolute;
         z-index: 1;
-        top: -50%;
+        top: -14px;
         left: 46px;
-        padding: 3px;
+        padding: 0 3px;
         font-size: 0.8em;
         font-weight: bold;
         background-color: $color-second;
@@ -359,7 +359,6 @@ body, h1, h2, h3, form, input {
         }
         &__date {
             left: 36px;
-            padding: 0 3px;
         }
         &__input {
             width: 100%;
