--- a/css/style.scss
+++ b/css/style.scss
@@ -192,8 +192,11 @@ body, h1, h2, h3, form, input {
 .task {
     position: relative;
     display: flex;
-    transition: opacity 0.2s ease-in, filter 0.2s ease-in, transform 0.3s ease-in;
+    transition: opacity 0.2s ease-in, filter 0.2s ease-in, transform 0.3s ease-in, margin 0.3s linear;
     &:not(:last-child) {
+        margin-bottom: 15px;
+    }
+    &:first-child {
         margin-bottom: 25px;
     }
     &__date {
@@ -205,7 +208,7 @@ body, h1, h2, h3, form, input {
         font-size: 0.8em;
         font-weight: bold;
         background-color: $color-second;
-
+        transition: opacity 0.3s linear;
     }
     &__input {
         flex: 1;
@@ -228,6 +231,7 @@ body, h1, h2, h3, form, input {
     &__input--price {
         display: none;
         max-width: 70px;
+        transition: opacity 0.3s linear;
     }
     &__button {
         width: 40px;
@@ -355,7 +359,7 @@ body, h1, h2, h3, form, input {
     .task {
         flex-wrap: wrap;
         &:not(:last-child) {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         &__date {
             left: 36px;
@@ -372,6 +376,11 @@ body, h1, h2, h3, form, input {
             width: 30px;
             height: 30px;
             background-size: 70%;
+        }
+    }
+    .task--date-active {
+        &:not(:last-child) {
+            margin-bottom: 20px;
         }
     }
 }
