--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body, h1, h2, h3, form, input {
 }
 
 .page {
-  padding: 20px;
+  padding: 0 20px;
   font-family: "Roboto Mono", monospace;
 }
 
@@ -21,7 +21,6 @@ body, h1, h2, h3, form, input {
   background-color: #e2e2e2;
   -webkit-box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.4);
           box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.4);
-  overflow: hidden;
 }
 
 .todo__header {
@@ -225,26 +224,29 @@ body, h1, h2, h3, form, input {
   transition: transform 0.2s ease-in, background-color 0.2s ease-in, -webkit-transform 0.2s ease-in;
 }
 
-.settings-toggle {
+.settings-button {
   position: absolute;
   z-index: 15;
   top: 50%;
-  left: 10px;
   width: 30px;
   height: 30px;
   background-color: transparent;
-  background-image: url("../image/settings.svg");
   border: 0;
   border-radius: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+  cursor: pointer;
   -webkit-transform-origin: center;
           transform-origin: center;
   -webkit-transition: -webkit-box-shadow 0.2s ease-in, -webkit-transform 0.3s linear;
   transition: -webkit-box-shadow 0.2s ease-in, -webkit-transform 0.3s linear;
   transition: box-shadow 0.2s ease-in, transform 0.3s linear;
   transition: box-shadow 0.2s ease-in, transform 0.3s linear, -webkit-box-shadow 0.2s ease-in, -webkit-transform 0.3s linear;
-  cursor: pointer;
+}
+
+.settings-toggle {
+  left: 10px;
+  background-image: url("../image/settings.svg");
   outline: none;
 }
 
@@ -256,6 +258,17 @@ body, h1, h2, h3, form, input {
 .settings-toggle--active {
   -webkit-transform: translateY(-50%) translateX(100%) rotate(180deg);
           transform: translateY(-50%) translateX(100%) rotate(180deg);
+}
+
+.settings-clear {
+  right: 10px;
+  background-image: url("../image/refresh.svg");
+  border-radius: 0;
+}
+
+.settings-clear--active {
+  -webkit-transform: translateY(-50%) rotate(180deg);
+          transform: translateY(-50%) rotate(180deg);
 }
 
 @media screen and (max-width: 600px) {
